change template name to form.html and added search view

--- a/gui/templates/group10/form.html
+++ b/gui/templates/group10/form.html
@@ -39,7 +39,7 @@ function min()
 		<h1 align=left><strong>GROUP 10 SEARCH ENGINE</strong></h1>
 		<div class="topnav">
   <div class="search-container">
-    <form action="/action_page.php">
+    <form action="/group10/search" method="post">
       <input type="text" placeholder="Search.." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
