now can show mock result for search

--- a/gui/templates/group10/form.html
+++ b/gui/templates/group10/form.html
@@ -44,6 +44,9 @@ function min()
       <input type="text" placeholder="Search.." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
+  	<div>
+		{{ result }}
+	</div>
   </div>
 </div>
 		</div>
