style.css is included

--- a/gui/templates/group10/form.html
+++ b/gui/templates/group10/form.html
@@ -1,10 +1,14 @@
+<!DOCTYPE html>
+
+{% load staticfiles %}
+
 <html>
 <head>
 	<title>food</title>
 	<link href="bootstrap-4.0.0/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="bootstrap-4.0.0/css/bootstrap.min.css" rel="stylesheet">
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<link href="style2.css" rel="stylesheet" type="text/css">
+	<link href="{% static "style.css" %}" rel="stylesheet" type="text/css">
 	<SCRIPT>
  
 
