add in bootstrap and font-awesome files

--- a/gui/templates/group10/form.html
+++ b/gui/templates/group10/form.html
@@ -5,9 +5,9 @@
 <html>
 <head>
 	<title>food</title>
-	<link href="bootstrap-4.0.0/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="bootstrap-4.0.0/css/bootstrap.min.css" rel="stylesheet">
-	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="{% static "bootstrap-4.0.0/css/bootstrap-theme.min.css" %}" rel="stylesheet">
+	<link href="{% static "bootstrap-4.0.0/css/bootstrap.min.css" %}" rel="stylesheet">
+	<link href="{% static "font-awesome-4.7.0/css/font-awesome.min.css" %}" rel="stylesheet">
 	<link href="{% static "style.css" %}" rel="stylesheet" type="text/css">
 	<SCRIPT>
  
