try to display results from the real query

--- a/gui/templates/group10/form.html
+++ b/gui/templates/group10/form.html
@@ -49,7 +49,7 @@ function min()
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
   	<div>
-		{{ result }}
+		{{ result | safe }}
 	</div>
   </div>
 </div>
