--- a/gui/static/style.css
+++ b/gui/static/style.css
@@ -27,11 +27,10 @@ body
 
 header
 {
-	background-image:url("http://backgroundcheckall.com/wp-content/uploads/2017/12/nice-background-images-hd-4.jpg");
 	height:100vh;
 	background-position:center;
 	background-size:cover;
-	background-attachment:fixed;
+	background-attachment:scroll;
 }
 h1
 {
@@ -54,22 +53,6 @@ h1
 	margin-left:15px;
 }
 
-.main-nav li a
-{
-	color:white;
-	text-decoration:none;
-	font-size:90%;
-	font-weight:bold;
-
-}
-
-.main-nav li a:hover
-{
-	color:#e67e22;
-	border-bottom:2px solid #e67e22;
-	transition:all 0.5s ease-in;
-	padding:20px;
-}
 .search-container input[type=text] {
     width: 500px;
 	float: center;
