included diff styling for 2 pages

--- a/gui/templates/group10/form.html
+++ b/gui/templates/group10/form.html
@@ -9,8 +9,9 @@
 	<link href="{% static "bootstrap-4.0.0/css/bootstrap-theme.min.css" %}" rel="stylesheet">
 	<link href="{% static "bootstrap-4.0.0/css/bootstrap.min.css" %}" rel="stylesheet">
 	<link href="{% static "font-awesome-4.7.0/css/font-awesome.min.css" %}" rel="stylesheet">
-	<!--<link href="{% static "index.css" %}" rel="stylesheet" type="text/css"> -->
-	<link href="{% static "search.css" %}" rel="stylesheet" type="text/css">
+	<style>
+		{{ css }}
+	</style>
 
 	<SCRIPT>
 
