change url link to book title href, add jaccard inside but not working

--- a/gui/templates/group10/form.html
+++ b/gui/templates/group10/form.html
@@ -10,6 +10,9 @@
 	<link href="{% static "bootstrap-4.0.0/css/bootstrap.min.css" %}" rel="stylesheet">
 	<link href="{% static "font-awesome-4.7.0/css/font-awesome.min.css" %}" rel="stylesheet">
 	<style>
+	body{
+		background-image: url("C:/Users/daq11/Dropbox/developer/CZ4034/CZ4034InfoRetrievalGrp10/gui/static/book3.jpg");
+	}
 		{{ css }}
 	</style>
 
