add background image

--- a/gui/templates/group10/form.html
+++ b/gui/templates/group10/form.html
@@ -11,7 +11,7 @@
 	<link href="{% static "font-awesome-4.7.0/css/font-awesome.min.css" %}" rel="stylesheet">
 	<style>
 	body{
-		background-image: url("C:/Users/daq11/Dropbox/developer/CZ4034/CZ4034InfoRetrievalGrp10/gui/static/book3.jpg");
+		background-image: url("{% static "book5.jpg" %}");
 	}
 		{{ css }}
 	</style>
