--- a/gui/static/style.css
+++ b/gui/static/style.css
@@ -1,79 +1,5 @@
-*
-{
-	margin:0;
-	padding:0;
-	
-}
-
-.row
-{
-	max-width:1140px;
-	margin:0 auto;
-}
 body
 {
-	font-family:tahoma;
-	
-}
-
-.hero
-{
-	position:absolution;
-	width:1140px;
-	top:50%;
-	left:50%;}
-	transform: translate(-50%,-50%);
-}
-
-header
-{
-	height:100vh;
-	background-position:center;
+    background-image:url("C:/Users/daq11/Dropbox/developer/CZ4034/CZ4034InfoRetrievalGrp10/gui/static/book3.jpg");
 	background-size:cover;
-	background-attachment:scroll;
-}
-h1
-{
-	
-	color:black;
-	font-size:50;
-}
-
-.main-nav
-{
-	list-style:none;
-	float:right;
-	margin-top:60px;
-	font-size: 30px;
-}
-
-.main-nav a
-{
-	display:inline-block;
-	margin-left:15px;
-}
-
-.search-container input[type=text] {
-    width: 500px;
-	float: center;
-    padding: 6px;
-    border: 1px solid black;
-    margin-top: 8px;
-    margin-left: 30px;
-    font-size: 17px;
-}
-
-/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
-@media screen and (max-width: 600px) {
-    .topnav a, .topnav input[type=text] {
-        float: none;
-        display: block;
-        text-align: left;
-        width: 100%;
-        margin: 0;
-        padding: 14px;
-    }
-    .topnav input[type=text] {
-        border: 1px solid #ccc;
-    }
 }
