--- a/gui/templates/group10/form.html
+++ b/gui/templates/group10/form.html
@@ -12,6 +12,8 @@
 	<style>
 	body{
 		background-image: url("{% static "book5.jpg" %}");
+		background-attachment: fixed;
+		background-repeat: no-repeat;
 	}
 		{{ css }}
 	</style>
