add name attribute

--- a/gui/templates/group10/form.html
+++ b/gui/templates/group10/form.html
@@ -53,10 +53,10 @@
                       <input type="text" name="search" class="search-bar" id="searchBar">
                       <input type="submit" value="Submit" id="submitButton">
 						<div>
-						Business<input type="checkbox" id="business" checked>
-						Cook<input type="checkbox" id="cook" checked>
-						Literature<input type="checkbox" id="literature" checked>
-							Sports<input type="checkbox" id="sports" checked></div>
+						Business<input type="checkbox" id="business" name="business" checked>
+						Cook<input type="checkbox" id="cook" name="cook" checked>
+						Literature<input type="checkbox" id="literature" name="literature" checked>
+							Sports<input type="checkbox" id="sports" name="sports" checked></div>
                     </form>
                 </div>
 
